Revert "fix: resolve input field overlap in 'Create Room' dialog"
This reverts commit 6a1913721e5cd3b589614fe4fa7b94dfb95ca952.

--- a/src/app/components/shared/_dialogs/multi-level-dialog/common-form-field.scss
+++ b/src/app/components/shared/_dialogs/multi-level-dialog/common-form-field.scss
@@ -1,7 +1,6 @@
 .mat-mdc-form-field {
-  margin-bottom: 1.5em;
+  margin-bottom: 0;
   display: block;
-  width: 100%;
 }
 
 :host ::ng-deep .mat-mdc-form-field-subscript-wrapper {
