--- a/src/app/components/shared/_dialogs/multi-level-dialog/multi-level-dialog.component.scss
+++ b/src/app/components/shared/_dialogs/multi-level-dialog/multi-level-dialog.component.scss
@@ -1,5 +1,4 @@
 .button-container {
-  margin-top: 1em;
   display: flex;
   flex-wrap: wrap;
   gap: 0.75em;
